--- a/rulebooks/rulebook_busca_event.yml
+++ b/rulebooks/rulebook_busca_event.yml
@@ -1,6 +1,6 @@
 ---
 - name: Zabbix Test rulebook
-  hosts: all
+  hosts: EDA
   sources:
     - ansible.eda.webhook:
         host: 0.0.0.0
@@ -10,3 +10,9 @@
       condition: event.payload is defined
       action:
         debug:
+
+    - name: Alerta de uso acima de 90%
+      condition: event.event_name is defined and "used > 90%" in event.event_name
+      action:
+        run_playbook:
+          name: playbooks/acionar_alerta.yaml
