--- a/playbooks/win_disk.yaml
+++ b/playbooks/win_disk.yaml
@@ -13,8 +13,7 @@
 
   tasks:
 
-    - name: Remover o arquivo E:\dummyfile.bin, se existir
-      win_file:
+    - name: Remove a file, if present
+      ansible.windows.win_file:
         path: E:\dummyfile.bin
         state: absent
-      
