--- a/f5.yml
+++ b/f5.yml
@@ -13,7 +13,5 @@
 
   tasks:
 
-    - name: Remove a file, if present
-      ansible.windows.win_file:
-        path: E:\dummyfile.bin
-        state: absent
+    - include_role:
+        name: disk
