--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -12,7 +12,7 @@
     #     debug:
 
     - name: Alerta de uso acima de 90%
-      condition: event.event_name is defined and "used > 90%" in event.event_name
+      condition: event.payload.event_name is defined and "used > 90%" in event.event_name
       action:
         run_job_template:
           name: "My first playbook"
