--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -18,4 +18,4 @@
       action:
         run_job_template:
           name: "My first playbook"
-          organization: "default"
+          organization: "Default"
