--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -2,3 +2,8 @@
   ansible.windows.win_file:
     path: E:\dummyfile.bin
     state: absent
+
+- name: Restart a service
+  ansible.windows.win_service:
+    name: "{{ service }}"
+    state: restarted
