--- a/rulebooks/zabbix_service.yaml
+++ b/rulebooks/zabbix_service.yaml
@@ -4,13 +4,16 @@
   sources:
     - ansible.eda.webhook:
         host: 0.0.0.0
-        port: 5015
+        port: 5010
   rules:
     - name: Alerta de uso acima de 90%
       condition: |
         event.payload.host_host == 'homelab01.lcs.local' and
-        event.payload.operation_data is match("^Space used: 9", ignorecase=true) 
+        event.payload.operation_data is match("^Stopped", ignorecase=true)
       action:
         run_job_template:
           name: "My first playbook"
           organization: "Default"
+          job_args:
+            extra_vars:
+              service: "{{ event.payload.event_tags.service[0] }}"
