--- a/rulebooks/zabbix_disk.yaml
+++ b/rulebooks/zabbix_disk.yaml
@@ -14,3 +14,6 @@
         run_job_template:
           name: "My first playbook"
           organization: "Default"
+          job_args:
+            extra_vars:
+              server: "{{ event.payload.host_ip }}"
