--- a/rulebooks/zabbix_service.yaml
+++ b/rulebooks/zabbix_service.yaml
@@ -5,7 +5,8 @@
     - ansible.eda.webhook:
         host: 0.0.0.0
         port: 5010
-  
+        timeout: 300
+        
   rules:
 
     - name: Alerta de uso acima de 90%
