--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -9,6 +9,19 @@
   rules:
   
     - name: debug
-      condition: event.payload
+      condition: event.payload.event_name
       action:
         debug:
+    
+    # - name: Motor de regras
+    #   condition: |
+    #     event.payload.host_host == 'homelab03' and
+    #     event.payload.motor-de-regras.service contains "not running"
+    #   action:
+    #     run_job_template:
+    #       name: "My first playbook"
+    #       organization: "Default"
+    #       job_args:
+    #         extra_vars:
+    #           server: "{{ event.payload.host_ip }}"
+    #           service: "{{ event.payload.trigger_name.service[0] }}"
