--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -9,14 +9,15 @@
   rules:
   
     - name: debug
-      condition: event.payload.event_name
+      condition: event.payload
       action:
-        debug:
+        debug:  
+          msg: "Event received: {{ event.payload.event_name }}"
     
     # - name: Motor de regras
     #   condition: |
     #     event.payload.host_host == 'homelab03' and
-    #     event.payload.motor-de-regras.service contains "not running"
+    #     event.payload.event_name contains "not running"
     #   action:
     #     run_job_template:
     #       name: "My first playbook"
@@ -24,4 +25,4 @@
     #       job_args:
     #         extra_vars:
     #           server: "{{ event.payload.host_ip }}"
-    #           service: "{{ event.payload.trigger_name.service[0] }}"
+    #           service: "{{ event.payload.event_name }}"
