--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -1,9 +1,14 @@
-- name: Remove a file, if present
-  ansible.windows.win_file:
-    path: E:\dummyfile.bin
-    state: absent
+# - name: Remove a file, if present
+#   ansible.windows.win_file:
+#     path: E:\dummyfile.bin
+#     state: absent
 
-# - name: Restart a service
-#   ansible.windows.win_service:
-#     name: "{{ service }}"
-#     state: restarted
+# # - name: Restart a service
+# #   ansible.windows.win_service:
+# #     name: "{{ service }}"
+# #     state: restarted
+
+- name: Start service httpd, if not started
+  ansible.builtin.service:
+    name: motor-de-regras.service
+    state: started
