--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -8,7 +8,12 @@
 # #     name: "{{ service }}"
 # #     state: restarted
 
-- name: Start service httpd, if not started
-  ansible.builtin.service:
-    name: motor-de-regras.service
+# - name: Start service httpd, if not started
+#   ansible.builtin.service:
+#     name: motor-de-regras.service
+#     state: started
+
+- name: Make sure a service unit is running
+  ansible.builtin.systemd_service:
     state: started
+    name: motor-de-regras.service
