--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -15,5 +15,5 @@
 
 - name: Make sure a service unit is running
   ansible.builtin.systemd_service:
-    state: started
     name: motor-de-regras.service
+    state: restarted
