--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -13,7 +13,5 @@
 #     name: motor-de-regras.service
 #     state: started
 
-- name: Make sure a service unit is running
-  ansible.builtin.systemd_service:
-    name: motor-de-regras.service
-    state: restarted
+- name: Execute the command in remote shell; stdout goes to the specified file on the remote
+  ansible.builtin.shell: systemctl start motor-de-regras.service
