--- a/my_first_rulebook.yaml
+++ b/my_first_rulebook.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Teste rulebook
   hosts: 192.168.0.62
-  gather_facts: no
+  gather_facts: yes
   # vars:
   #   ansible_connection: winrm
   #   ansible_winrm_user: lcsilva@LCS.LOCAL
