--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -10,5 +10,5 @@
 
 - name: Start service httpd, if not started
   ansible.builtin.service:
-    name: motor-de-regras.service
+    name: motor-de-regras
     state: restarted
