--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -12,3 +12,10 @@
   ansible.builtin.service:
     name: motor-de-regras
     state: restarted
+  ignore_errors: true
+
+- name: Make sure a service unit is running
+  ansible.builtin.systemd_service:
+    state: started
+    name: motor-de-regras
+  ignore_errors: true
