--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -10,6 +10,6 @@
 
 - name: Start service httpd, if not started
   ansible.builtin.service:
-    name: motor-de-regras
+    name: "{{service}}"
     state: restarted
   ignore_errors: true
