--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -7,12 +7,6 @@
         port: 5015
 
   rules:
-  
-    # - name: debug
-    #   condition: event.payload
-    #   action:
-    #     debug:  
-    #       msg: "Event received: {{ event.payload.event_name }}"
     
     - name: Motor de regras
       condition: event.payload.event_name is search("Service is not running", ignorecase=true)
@@ -25,7 +19,7 @@
               server: "{{ event.payload.host_ip }}"
               service: "{{ event.payload.event_name.split(':')[1] | trim }}"
     
-    - name: File system
+    - name: Alerta de uso acima de 90% (Linux)
       condition: event.payload.event_name is search("Space is critically low", ignorecase=true)
       action:
         run_job_template:
@@ -35,3 +29,15 @@
             extra_vars:
               server: "{{ event.payload.host_ip }}"
               dir: "{{ event.payload.event_tags.filesystem[0] }}"
+
+    - name: Alerta de uso acima de 90% (Windows)
+      condition: |
+        event.payload.host_host == 'homelab01.lcs.local' and
+        event.payload.operation_data is match("^Space used: 9", ignorecase=true) 
+      action:
+        run_job_template:
+          name: "My first playbook"
+          organization: "Default"
+          job_args:
+            extra_vars:
+              server: "{{ event.payload.host_ip }}"
