--- a/my_first_rulebook.yaml
+++ b/my_first_rulebook.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Teste rulebook
   hosts: "{{server}}"
-  gather_facts: yes
+  gather_facts: no
 
   tasks:
 
@@ -10,7 +10,7 @@
 
 - name: Teste rulebook
   hosts: "{{server}}"
-  gather_facts: yes
+  gather_facts: no
   vars:
     ansible_connection: winrm
     ansible_winrm_user: lcsilva@LCS.LOCAL
