--- a/roles/disk/tasks/main.yaml
+++ b/roles/disk/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Remove a file, if present
   ansible.windows.win_file:
-    path: E:\dummyfile.bin
+    path: "{{dir}}\dummyfile.bin"
     state: absent
   ignore_errors: true
 
