--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -41,3 +41,4 @@
           job_args:
             extra_vars:
               server: "{{ event.payload.host_ip }}"
+              dir: "{{ event.payload.event_tags.filesystem[0] }}"
