--- a/my_first_rulebook.yaml
+++ b/my_first_rulebook.yaml
@@ -1,4 +1,12 @@
 ---
+# - hosts: localhost
+#   gather_facts: no
+
+#   tasks:
+
+#   - include_role:
+#       name: inventory
+
 - name: Teste rulebook
   hosts: "{{server}}"
   gather_facts: no
