--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -20,7 +20,9 @@
               service: "{{ event.payload.event_name.split(':')[1] | trim }}"
     
     - name: Alerta de uso acima de 90% (Linux)
-      condition: event.payload.event_name is search("Space is critically low", ignorecase=true)
+      condition: |
+        event.payload.event_tags.target[0] == "linux" and
+        event.payload.event_name is search("Space is critically low", ignorecase=true)
       action:
         run_job_template:
           name: "Orizon"
@@ -32,7 +34,7 @@
 
     - name: Alerta de uso acima de 90% (Windows)
       condition: |
-        event.payload.host_host == 'homelab01.lcs.local' and
+        event.payload.event_tags.target[0] == "windows" and
         event.payload.operation_data is match("^Space used: 9", ignorecase=true) 
       action:
         run_job_template:
