--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -38,7 +38,7 @@
         event.payload.operation_data is match("^Space used: 9", ignorecase=true) 
       action:
         run_job_template:
-          name: "My first playbook"
+          name: "Orizon"
           organization: "Default"
           job_args:
             extra_vars:
