--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -31,6 +31,7 @@
             extra_vars:
               server: "{{ event.payload.host_ip }}"
               dir: "{{ event.payload.event_tags.filesystem[0] }}"
+              so: "{{ event.payload.event_tags.target[0] }}"
 
     - name: Alerta de uso acima de 90% (Windows)
       condition: |
@@ -44,3 +45,4 @@
             extra_vars:
               server: "{{ event.payload.host_ip }}"
               dir: "{{ event.payload.event_tags.filesystem[0] }}"
+              so: "{{ event.payload.event_tags.target[0] }}"
