--- a/roles/inventory/tasks/main.yml
+++ b/roles/inventory/tasks/main.yml
@@ -3,7 +3,8 @@
     host: "{{item}}"
     port: 22
     timeout: 10
-  ignore_errors: yes
+  ignore_errors: true
+  no_log: true
   register: ssh
   with_items: "{{server}}"
 
@@ -12,7 +13,8 @@
     host: "{{item}}"
     port: 5985
     timeout: 10
-  ignore_errors: yes
+  ignore_errors: true
+  no_log: true
   register: winrm
   with_items: "{{server}}"
 
