--- a/rulebooks/zabbix.yaml
+++ b/rulebooks/zabbix.yaml
@@ -8,8 +8,10 @@
 
   rules:
     
-    - name: Motor de regras
-      condition: event.payload.event_name is search("Service is not running", ignorecase=true)
+    - name: Alerta de serviço parado (Linux)
+      condition: |
+        event.payload.event_tags.target[0] == "linux" and
+        event.payload.event_name is search("Service is not running", ignorecase=true)
       action:
         run_job_template:
           name: "Orizon"
@@ -18,6 +20,7 @@
             extra_vars:
               server: "{{ event.payload.host_ip }}"
               service: "{{ event.payload.event_name.split(':')[1] | trim }}"
+              so: "{{ event.payload.event_tags.target[0] }}"
     
     - name: Alerta de uso acima de 90% (Linux)
       condition: |
